--- a/package.json
+++ b/package.json
@@ -13,10 +13,13 @@
     "test:coverage": "cross-env NODE_OPTIONS=--max-old-space-size=1024 jest --maxWorkers=75% --coverage"
   },
   "dependencies": {
-    "@deskpro/app-sdk": "^1.0.0",
+    "@deskpro/app-sdk": "1.1.9",
+    "iframe-resizer": "^4.3.2",
     "polished": "^4.1.1",
     "react": "^17.0.2",
-    "react-dom": "^17.0.2"
+    "react-dom": "^17.0.2",
+    "styled-components": "^5.3.5",
+    "ts-pattern": "4.0.5"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.1",
