--- a/package.json
+++ b/package.json
@@ -19,9 +19,11 @@
     "lodash": "^4.17.21",
     "polished": "^4.1.1",
     "react": "^17.0.2",
+    "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^17.0.2",
     "styled-components": "^5.3.5",
-    "ts-pattern": "4.0.5"
+    "ts-pattern": "4.0.5",
+    "uuid": "^9.0.0"
   },
   "devDependencies": {
     "@testing-library/jest-dom": "^5.16.1",
@@ -29,9 +31,11 @@
     "@types/jest": "^27.4.0",
     "@types/lodash": "^4.14.184",
     "@types/react": "^17.0.33",
+    "@types/react-copy-to-clipboard": "^5.0.4",
     "@types/react-dom": "^17.0.10",
     "@types/styled-components": "^5.1.26",
     "@types/testing-library__jest-dom": "^5.14.2",
+    "@types/uuid": "^8.3.4",
     "@typescript-eslint/eslint-plugin": "5.6.0",
     "@typescript-eslint/parser": "5.6.0",
     "@vitejs/plugin-react": "^1.0.7",
