--- a/manifest.json
+++ b/manifest.json
@@ -1,7 +1,7 @@
 {
   "name": "@deskpro-apps/teamviewer",
   "title": "TeamViewer",
-  "description": "TeamViewer app",
+  "description": "Create TeamViewer sessions and share them with your users in ticket",
   "version": "1.0.1",
   "scope": "agent",
   "isSingleInstall": false,
