--- a/package.json
+++ b/package.json
@@ -21,6 +21,8 @@
     "react": "^17.0.2",
     "react-copy-to-clipboard": "^5.1.0",
     "react-dom": "^17.0.2",
+    "react-error-boundary": "^3.1.4",
+    "react-router-dom": "^6.4.0",
     "styled-components": "^5.3.5",
     "ts-pattern": "4.0.5",
     "uuid": "^9.0.0"
