Implemented show sessions and delete session

--- a/manifest.json
+++ b/manifest.json
@@ -52,7 +52,7 @@
       "timeout": 10
     }, {
       "url": "https://webapi.teamviewer.com/api/v1/*",
-      "methods": ["GET", "POST"],
+      "methods": ["GET", "POST", "PUT"],
       "timeout": 10
     }]
   }
