--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "@deskpro/app-sdk": "1.1.9",
     "@deskpro/deskpro-ui": "2.9.1",
+    "date-fns": "^2.29.3",
     "iframe-resizer": "^4.3.2",
     "lodash": "^4.17.21",
     "polished": "^4.1.1",
