Added appStoreUrl param into manifest.json

--- a/manifest.json
+++ b/manifest.json
@@ -2,7 +2,8 @@
   "name": "@deskpro-apps/teamviewer",
   "title": "TeamViewer",
   "description": "Create TeamViewer sessions and share them with your users in ticket.",
-  "version": "1.0.2",
+  "appStoreUrl": "https://www.deskpro.com/product-embed/apps/teamviewer",
+  "version": "1.0.3",
   "scope": "agent",
   "isSingleInstall": false,
   "hasDevMode": true,
