--- a/package.json
+++ b/package.json
@@ -3,9 +3,9 @@
   "version": "0.0.0",
   "license": "BSD-3-Clause",
   "scripts": {
-    "start": "vite",
+    "start": "vite --https",
     "build": "rimraf ./dist/* && tsc && vite build",
-    "build:package": "yarn build && yarn package",
+    "build:package": "pnpm build && pnpm package",
     "package": "rimraf ./build/* && node ./bin/package.js",
     "serve": "vite preview",
     "lint": "eslint --max-warnings 0 --ext ts,tsx ./src",
