Updated deps and removed iframe-resizer

--- a/package.json
+++ b/package.json
@@ -14,19 +14,19 @@
     "bumpManifestVer": "node ./bin/bumpManifestVer.js"
   },
   "dependencies": {
-    "@deskpro/app-sdk": "3.0.7",
-    "@deskpro/deskpro-ui": "4.7.0",
+    "@deskpro/app-sdk": "^3.0.18",
+    "@deskpro/deskpro-ui": "^7.18.4",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@heroicons/react": "1.0.6",
     "date-fns": "^2.29.3",
     "flatpickr": "^4.6.13",
-    "iframe-resizer": "^4.3.2",
     "lodash": "^4.17.21",
     "polished": "^4.1.1",
     "prettier": "^2.8.7",
     "react": "^17.0.2",
     "react-dom": "^17.0.2",
     "react-error-boundary": "^3.1.4",
+    "react-resize-observer": "^1.1.1",
     "react-router-dom": "^6.4.0",
     "simplebar": "^6.2.5",
     "styled-components": "^5.3.6",
