--- a/package.json
+++ b/package.json
@@ -3,7 +3,7 @@
   "version": "0.0.0",
   "license": "BSD-3-Clause",
   "scripts": {
-    "start": "vite --https",
+    "start": "vite",
     "build": "rimraf ./dist/* && tsc && vite build",
     "build:package": "pnpm build && pnpm package",
     "package": "rimraf ./build/* && node ./bin/package.js",
@@ -18,18 +18,19 @@
     "@deskpro/deskpro-ui": "^7.18.4",
     "@fortawesome/free-solid-svg-icons": "^6.4.0",
     "@heroicons/react": "1.0.6",
+    "@tanstack/react-query": "^4.36.1",
     "date-fns": "^2.29.3",
     "flatpickr": "^4.6.13",
     "lodash": "^4.17.21",
     "polished": "^4.1.1",
     "prettier": "^2.8.7",
-    "react": "^17.0.2",
-    "react-dom": "^17.0.2",
-    "react-error-boundary": "^3.1.4",
+    "react": "^18.2.0",
+    "react-dom": "^18.2.0",
+    "react-error-boundary": "^4.0.13",
     "react-resize-observer": "^1.1.1",
-    "react-router-dom": "^6.4.0",
+    "react-router-dom": "^6.22.3",
     "simplebar": "^6.2.5",
-    "styled-components": "^5.3.6",
+    "styled-components": "^5.3.11",
     "tippy.js": "^6.3.7",
     "ts-pattern": "4.0.5",
     "uuid": "^9.0.0"
@@ -38,10 +39,10 @@
     "@testing-library/jest-dom": "^5.16.1",
     "@testing-library/react": "^12.1.2",
     "@types/jest": "^27.4.0",
-    "@types/lodash": "^4.14.184",
-    "@types/react": "^17.0.33",
+    "@types/lodash": "^4.17.0",
+    "@types/react": "^18.2.79",
     "@types/react-copy-to-clipboard": "^5.0.4",
-    "@types/react-dom": "^17.0.10",
+    "@types/react-dom": "^18.2.25",
     "@types/styled-components": "^5.1.26",
     "@types/testing-library__jest-dom": "^5.14.2",
     "@types/uuid": "^8.3.4",
@@ -58,7 +59,7 @@
     "rollup-plugin-copy": "3.4.0",
     "slugify": "^1.6.5",
     "ts-jest": "^27.1.2",
-    "typescript": "^4.4.4",
-    "vite": "^2.9.18"
+    "typescript": "^4.9.5",
+    "vite": "^5.2.9"
   }
 }
