--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "@deskpro/deskpro-ui": "^7.18.5",
     "@fortawesome/free-solid-svg-icons": "^6.5.2",
     "@heroicons/react": "1.0.6",
+    "@hookform/resolvers": "^3.3.4",
     "@tanstack/react-query": "^4.36.1",
     "date-fns": "^2.30.0",
     "flatpickr": "^4.6.13",
@@ -27,6 +28,7 @@
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
     "react-error-boundary": "^4.0.13",
+    "react-hook-form": "^7.51.3",
     "react-is": "^18.2.0",
     "react-resize-observer": "^1.1.1",
     "react-router-dom": "^6.22.3",
@@ -34,7 +36,9 @@
     "styled-components": "^5.3.11",
     "tippy.js": "^6.3.7",
     "ts-pattern": "4.3.0",
-    "uuid": "^9.0.1"
+    "use-debounce": "^10.0.0",
+    "uuid": "^9.0.1",
+    "zod": "^3.22.5"
   },
   "devDependencies": {
     "@jest/globals": "^29.7.0",
