--- a/package.json
+++ b/package.json
@@ -23,6 +23,7 @@
     "@tanstack/react-query": "^4.36.1",
     "date-fns": "^2.30.0",
     "flatpickr": "^4.6.13",
+    "iframe-resizer": "^4.3.11",
     "lodash": "^4.17.21",
     "polished": "^4.1.1",
     "react": "^18.2.0",
