--- a/package.json
+++ b/package.json
@@ -4,9 +4,9 @@
   "license": "BSD-3-Clause",
   "scripts": {
     "start": "vite",
-    "build": "rimraf ./dist/* && tsc && vite build",
+    "build": "rm -rf ./dist/ && tsc && vite build",
     "build:package": "pnpm build && pnpm package",
-    "package": "rimraf ./build/* && node ./bin/package.js",
+    "package": "rm -rf ./build/ && node ./bin/package.js",
     "serve": "vite preview",
     "lint": "eslint --max-warnings 0 --ext ts,tsx ./src",
     "test": "cross-env NODE_OPTIONS=--max-old-space-size=1024 jest --maxWorkers=75%",
@@ -15,67 +15,64 @@
     "bumpManifestVer": "node ./bin/bumpManifestVer.js"
   },
   "dependencies": {
-    "@deskpro/app-sdk": "^3.0.20",
-    "@deskpro/deskpro-ui": "^7.18.5",
-    "@fortawesome/free-solid-svg-icons": "^6.5.2",
+    "@deskpro/app-sdk": "^4.1.5",
+    "@deskpro/deskpro-ui": "^8.2.0",
+    "@fortawesome/free-solid-svg-icons": "^6.7.2",
     "@heroicons/react": "1.0.6",
-    "@hookform/resolvers": "^3.3.4",
+    "@hookform/resolvers": "^3.9.1",
     "@tanstack/react-query": "^4.36.1",
     "date-fns": "^2.30.0",
     "flatpickr": "^4.6.13",
     "lodash": "^4.17.21",
-    "polished": "^4.1.1",
-    "react": "^18.2.0",
-    "react-dom": "^18.2.0",
-    "react-error-boundary": "^4.0.13",
-    "react-hook-form": "^7.51.3",
-    "react-is": "^18.2.0",
+    "polished": "^4.3.1",
+    "react": "^18.3.1",
+    "react-dom": "^18.3.1",
+    "react-error-boundary": "^4.1.2",
+    "react-hook-form": "^7.54.2",
+    "react-is": "^18.3.1",
     "react-resize-observer": "^1.1.1",
-    "react-router-dom": "^6.22.3",
-    "simplebar": "^6.2.5",
-    "styled-components": "^5.3.11",
+    "react-router-dom": "^6.28.1",
+    "simplebar": "^6.3.0",
+    "styled-components": "^6.1.14",
     "tippy.js": "^6.3.7",
     "ts-pattern": "4.3.0",
-    "use-debounce": "^10.0.0",
+    "use-debounce": "^10.0.4",
     "uuid": "^9.0.1",
-    "zod": "^3.22.5"
+    "zod": "^3.24.1"
   },
   "devDependencies": {
     "@jest/globals": "^29.7.0",
-    "@swc/core": "^1.4.15",
-    "@swc/helpers": "^0.5.10",
-    "@swc/jest": "^0.2.36",
-    "@testing-library/dom": "^10.0.0",
-    "@testing-library/jest-dom": "^6.4.2",
-    "@testing-library/react": "^15.0.2",
+    "@swc/core": "^1.10.4",
+    "@swc/helpers": "^0.5.15",
+    "@swc/jest": "^0.2.37",
+    "@testing-library/dom": "^10.4.0",
+    "@testing-library/jest-dom": "^6.6.3",
+    "@testing-library/react": "^15.0.7",
     "@testing-library/user-event": "^14.5.2",
-    "@types/jest": "^29.5.12",
-    "@types/lodash": "^4.17.0",
-    "@types/react": "^18.2.79",
+    "@types/jest": "^29.5.14",
+    "@types/lodash": "^4.17.14",
+    "@types/react": "^18.3.18",
     "@types/react-copy-to-clipboard": "^5.0.7",
-    "@types/react-dom": "^18.2.25",
-    "@types/styled-components": "^5.1.34",
+    "@types/react-dom": "^18.3.5",
     "@types/uuid": "^9.0.8",
-    "@typescript-eslint/eslint-plugin": "^7.7.0",
-    "@typescript-eslint/parser": "^7.7.0",
+    "@typescript-eslint/eslint-plugin": "^7.18.0",
+    "@typescript-eslint/parser": "^7.18.0",
     "@typescript/lib-dom": "npm:@types/web@^0.0.143",
-    "@vitejs/plugin-react": "^4.2.1",
-    "adm-zip": "^0.5.9",
+    "@vitejs/plugin-react": "^4.3.4",
+    "adm-zip": "^0.5.16",
     "cross-env": "7.0.3",
-    "eslint": "^8.57.0",
+    "eslint": "^8.57.1",
     "eslint-config-prettier": "8.10.0",
-    "eslint-plugin-react-hooks": "^4.6.0",
+    "eslint-plugin-react-hooks": "^4.6.2",
     "intersection-observer": "^0.12.2",
     "jest": "^29.7.0",
     "jest-environment-jsdom": "^29.7.0",
-    "node-fetch": "^3.3.2",
-    "prettier": "^3.2.5",
+    "prettier": "^3.4.2",
     "resize-observer-polyfill": "^1.5.1",
-    "rimraf": "^3.0.2",
     "rollup-plugin-copy": "^3.5.0",
-    "slugify": "^1.6.5",
-    "ts-jest": "^29.1.2",
-    "typescript": "^4.9.5",
-    "vite": "^5.2.9"
+    "slugify": "^1.6.6",
+    "ts-jest": "^29.2.5",
+    "typescript": "^5.7.2",
+    "vite": "^5.4.11"
   }
 }
